# MFCC

./: CMakeLists.txt  README.md  main.cpp
BasicAudioToolBox/: BasicAudioToolBox.vcxproj  BasicAudioToolBox.vcxproj.filters  WAVE.c  WAVE.h  fft.c  fft.h  fileIO.c  fileIO.h  hmath.h  main.c  sigProcess.c  sigProcess.h
inih/: README.md
inih/cpp/: INIReader.cpp  INIReader.h
inih/examples/: INIReaderExample.cpp
inih/tests/: baseline_disallow_inline_comments.txt  baseline_handler_lineno.txt  baseline_heap_realloc.txt  baseline_heap_realloc_max_line.txt  baseline_single.txt  unittest.bat  unittest.c  unittest.sh  unittest_string.c
